fix: paginated types
