# src/skills/skills.controller.ts
@@ -6,6 +6,7 @@ import { SkillsService } from './skills.service'
 
 import { AuthRequest } from '@/auth/entities/request.entity'
 import { PaginationDto } from '@/common/dto/input.dto'
+import { PaginatedResponseDto } from '@/common/dto/output.dto'
 
 import { Body, Controller, Delete, Get, Param, Patch, Post, Query, Req } from '@nestjs/common'
 import { ApiHeader, ApiResponse, ApiTags } from '@nestjs/swagger'
@@ -16,7 +17,7 @@ export class SkillsController {
   constructor(private readonly skillsService: SkillsService) {}
 
   @ApiHeader({ name: 'Authorization' })
-  @ApiResponse({ type: SkillDto, isArray: true })
+  @ApiResponse({ type: PaginatedResponseDto(SkillDto) })
   @Get()
   findAll(@Req() req: AuthRequest, @Query() paginationDto: PaginationDto) {
     return this.skillsService.findAll(req.user.id, paginationDto)
@@ -30,7 +31,7 @@ export class SkillsController {
   }
 
   @ApiHeader({ name: 'Authorization' })
-  @ApiResponse({ type: SkillDto, isArray: true })
+  @ApiResponse({ type: PaginatedResponseDto(SkillDto) })
   @Get('search')
   searchAll(
     @Req() req: AuthRequest,
